--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,10 +1,5 @@
 ---
 version: 0.2
-
-env:
-     parameter-store:         
-       JWT_SECRET: JWT_SECRET
-
 phases:
   install:
     runtime-versions:
@@ -27,6 +22,7 @@ phases:
       commands:        
         - TAG="$REPOSITORY_NAME.$REPOSITORY_BRANCH.$ENVIRONMENT_NAME.$(date +%Y-%m-%d.%H.%M.%S).$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
         - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@' simple_jwt_api.yml
+        - sed -i 's@JWT_SECRET_VALUE@'"$JWT_SECRET"'@' simple-jwt-api.yml
         - $(aws ecr get-login --no-include-email)
         - export KUBECONFIG=$HOME/.kube/config
         
@@ -45,3 +41,6 @@ phases:
       - printf '[{"name":"simple_jwt_api","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
 artifacts:
   files: build.json
+env:
+     parameter-store:         
+       JWT_SECRET: JWT_SECRET
